--- a/web-client/src/index.css
+++ b/web-client/src/index.css
@@ -7,3 +7,22 @@
 		@apply bg-gradient-to-br from-orange-400 via-red-500 to-pink-500 min-h-screen;
 	}
 }
+
+@layer components {
+	.sidebar-icon {
+		@apply relative flex items-center justify-center 
+                h-12 w-12 mt-2 mb-2 mx-auto 
+                shadow-lg bg-gray-800 text-violet-500
+                hover:bg-violet-600 hover:text-white
+                rounded-3xl hover:rounded-xl
+                transition-all duration-100 ease-linear
+                cursor-pointer;
+	}
+	.sidebar-tooltip {
+		@apply absolute w-auto p-2 m-2 min-w-max left-14 bottom-0
+        rounded-md shadow-md
+        text-white bg-gray-900
+        text-xs font-bold
+        transition-all duration-75 scale-0 origin-top-left;
+	}
+}
