--- a/web-client/src/index.css
+++ b/web-client/src/index.css
@@ -4,7 +4,7 @@
 
 @layer base {
 	body {
-		@apply bg-gradient-to-br from-blue-200 to-pink-200 min-h-screen;
+		@apply bg-darkGray;
 	}
 }
 
@@ -14,7 +14,7 @@
                 h-12 w-12 mt-2 mb-2 mx-auto 
                 shadow-lg bg-gray-800 text-violet-500
                 hover:bg-violet-600 hover:text-white
-                rounded-3xl hover:rounded-xl
+                rounded-lg hover:rounded-md
                 transition-all duration-100 ease-linear
                 cursor-pointer;
 	}
